brightness in waybar, waybar switch

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -50,7 +50,8 @@
 #battery,
 #pulseaudio,
 #bluetooth,
-#network {
+#network,
+#custom-brightness {
   margin-right: 12px;
   margin-left: 12px;
   font-size: 18px;
