--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,8 @@
+@import "../../.config/omarchy/current/theme/waybar.css";
+
 * {
-  background-color: #1e1e2e;
-  color: #cdd6f4;
+  background-color: @background;
+  color: @foreground;
 
   border: none;
   border-radius: 0;
