enhance: update Waybar configuration and styles; reorganize custom modules and improve CSS imports

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,4 +1,4 @@
-@import "../../.config/omarchy/current/theme/waybar.css";
+@import "../omarchy/current/theme/waybar.css";
 
 * {
   background-color: @background;
@@ -81,4 +81,8 @@
 
 tooltip {
   padding: 2px;
+}
+
+.hidden {
+  opacity: 0;
 }
