--- a/waybar/style.css
+++ b/waybar/style.css
@@ -31,6 +31,13 @@
   opacity: 0.5;
 }
 
+#workspaces button.active,
+#workspaces button.active label,
+#workspaces button.focused,
+#workspaces button.focused label {
+  color: @accent;
+}
+
 #custom-arch {
   font-size: 24px;
   margin-right: 4px;
@@ -77,6 +84,10 @@
 
 #mpris {
   font-size: 12px;
+}
+
+#mpris.playing {
+  color: @accent;
 }
 
 tooltip {
